Unused imports Cleaned deprecations